<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/eventsubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_subject"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/organizerlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/eventsubject"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/eventorganizergerman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/organisator"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/eventorganizer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_organizer"
            android:textSize="15sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/organizerlayout"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="2sp"
            android:text="@string/beginn"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/eventstart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_EventStart"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5sp"
            android:paddingEnd="2sp"
            android:text="@string/ende"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/eventend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_EventEnd"
            android:textSize="15sp" />
    </LinearLayout>
</RelativeLayout>
