<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/buttonSignIn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/roundedbutton"
        android:paddingStart="-7dp"
        android:src="@drawable/ic_baseline_login_24"
        android:contentDescription="@string/login_button"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="RelativeOverlap">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/willkommen"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/home_page_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="8dp"
            android:text="@string/login_please"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_button_text" />
    </LinearLayout>

</RelativeLayout>
