<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/besetztStatus"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fontFamily="@font/open_sans"
        android:gravity="center"
        android:text=""
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Test" />

    <ImageButton
        android:id="@+id/buttonRefresh"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/roundedbutton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_refresh"
        android:contentDescription="@string/refresh" />

    <ImageButton
        android:id="@+id/buttonSignOut"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/roundedbutton"
        android:paddingStart="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_logout"
        tools:ignore="RtlSymmetry"
        android:contentDescription="@string/log_out" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading" />

    <ListView
        android:id="@+id/eventlist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="?colorPrimary"
        android:dividerHeight="1dp"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    </ListView>

    <TextView
        android:id="@+id/termin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="28sp"
        android:text="@string/keine_termine"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/besetztStatus" />

    <ImageButton
        android:id="@+id/button2"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/roundedbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add"
        android:contentDescription="@string/new_event" />


</androidx.constraintlayout.widget.ConstraintLayout>